--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./screen.css" media="screen">
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
 
 <body class="flex">
   <main class="flex container">
+    <section class="flex image mobile">
+      <img src="./images/image-header-mobile.jpg" alt="Pessoas Trabalhando e Rindo">
+    </section>
     <section class="flex card">
       <h1>Get <span>insights</span> that help your business grow.</h1>
       <p>
@@ -30,15 +34,15 @@
           <h2>12M+</h2>
           <h3>queries</h3>
         </span>
-      </span>
+        </span>
     </section>
-    <section class=" flex image">
-      <img src="./images/image-header-desktop.jpg" alt="">
+    <section class="flex image desktop">
+      <img src="./images/image-header-desktop.jpg" alt="Pessoas Trabalhando e Rindo">
     </section>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/Theuz1nh0">Theuz1nh0</a>.
   </footer>
 </body>
 
