--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body class="flex">
   <main class="flex container">
-    <section class="flex image mobile">
+    <div class="flex image mobile">
       <img src="./images/image-header-mobile.jpg" alt="Pessoas Trabalhando e Rindo">
-    </section>
+    </div>
     <section class="flex card">
       <h1>Get <span>insights</span> that help your business grow.</h1>
       <p>
@@ -22,23 +22,23 @@
         experience, and overall efficiency.
       </p>
       <div class="flex informations">
-        <span class="flex">
+        <div class="flex">
           <h2>10k+</h2>
           <h3>companies</h3>
-        </span>
-        <span class="flex">
+        </div>
+        <div class="flex">
           <h2>314</h2>
           <h3>templates</h3>
-        </span>
-        <span class="flex">
+        </div>
+        <div class="flex">
           <h2>12M+</h2>
           <h3>queries</h3>
-        </span>
-        </span>
+        </div>
+      </div>
     </section>
-    <section class="flex image desktop">
+    <div class="flex image desktop">
       <img src="./images/image-header-desktop.jpg" alt="Pessoas Trabalhando e Rindo">
-    </section>
+    </div>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
